# Dynamic-Societal-Friction-Simulator

./: .gitignore  CHANGES.md  COLAB_BUDGET_GUIDE.md  QUICK_START.md  README.md  TESTING.md  TESTING_QUICK_REFERENCE.md  pyproject.toml  requirements_predictor.txt
configs/: model_config.yaml  predictor_config.yaml  simulation_config.yaml
data/prompts/: friction_simulation.txt
notebooks/: train_on_colab.ipynb
scripts/: setup_env.sh  setup_gcp.sh  train.sh  train_predictor.py
src/: __init__.py  cli.py
src/agents/: __init__.py  social_agent.py
src/evaluation/: __init__.py  metrics.py
src/model/: __init__.py  cognitive_models.py  data_pipeline.py  inference.py  trainer.py
src/predictor/: __init__.py  app.py  core.py
src/predictor/data/: __init__.py  data_generator.py  historical_cases.py  real_data_pipeline.py
src/predictor/engines/: __init__.py  cnn_lstm_engine.py  confidence_scorer.py  historical_matcher.py  lgbm_predictor.py  policy_engine.py  whatif_engine.py
src/simulation/: __init__.py  engine.py
src/utils/: __init__.py  config.py
src/visualization/: dashboard.py
tests/: conftest.py  test_agents.py  test_cognitive_models.py  test_config.py  test_data_pipeline.py  test_engine.py  test_metrics.py
