[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-society-friction-simulator"
version = "0.1.0"
description = "An LLM-powered simulator for modeling social and cultural friction dynamics in societies"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "VN"},
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.38.0",
    "peft>=0.9.0",
    "bitsandbytes>=0.42.0",
    "datasets>=2.18.0",
    "accelerate>=0.27.0",
    "trl>=0.7.0",
    "wandb>=0.16.0",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "networkx>=3.2.0",
    "scikit-learn>=1.4.0",
    "sentencepiece>=0.2.0",
    "safetensors>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]
eval = [
    "ragas>=0.1.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8.0",
]

[project.scripts]
dsfs = "src.cli:app"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
